--- a/templates/index.html
+++ b/templates/index.html
@@ -4,35 +4,44 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Form</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-  <body>
-    <div class="container">
-      <form>
-        <p>Welcome</p>
-        <input
-          type="email"
-          placeholder="Email"
-        /><br />
-        <input
-          type="password"
-          placeholder="Password"
-        /><br />
-        <input
-          type="button"
-          value="Sign in"
-        /><br />
-        <a href="#">Forgot Password?</a>
-      </form>
+<body>
+  <div class="container">
+    <!-- Tell the browser where to send the form and how -->
+    <form action="/login" method="POST" autocomplete="off">
+      <p>Welcome</p>
 
-      <div class="drops">
-        <div class="drop drop-1"></div>
-        <div class="drop drop-2"></div>
-        <div class="drop drop-3"></div>
-        <div class="drop drop-4"></div>
-        <div class="drop drop-5"></div>
-      </div>
+      <!-- Add name attributes so Flask can read the values -->
+      <input
+        type="text"
+        name="username"
+        placeholder="Email"
+        required
+      /><br />
+
+      <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        required
+      /><br />
+
+      <!-- Make this a submit button -->
+      <button type="submit" class="btn">Sign in</button>
+
+      <br />
+      <a href="#">Forgot Password?</a>
+    </form>
+
+    <!-- your decorative drops, keep as-is -->
+    <div class="drops">
+      <div class="drop drop-1"></div>
+      <div class="drop drop-2"></div>
+      <div class="drop drop-3"></div>
+      <div class="drop drop-4"></div>
+      <div class="drop drop-5"></div>
     </div>
-    
-  </body>
+  </div>
+</body>
 </html>
