--- a/templates/index.html
+++ b/templates/index.html
@@ -30,28 +30,26 @@
     <form action="/login" method="POST" autocomplete="off">
       <p>Welcome</p>
 
-      <!-- Username field -->
+      <!-- Email input -->
       <input
         type="text"
         name="username"
         placeholder="Email"
         required
-      />
+      /><br />
 
-      <!-- Password field -->
+      <!-- Password input -->
       <input
         type="password"
         name="password"
         placeholder="Password"
         required
-      />
+      /><br />
 
       <!-- Submit button -->
       <button type="submit" class="btn">Sign in</button>
 
-      <!-- Decorative link -->
-      <br>
-      <a href="#">Forgot Password?</a>
+      <br /><a href="#">Forgot Password?</a>
     </form>
 
     <!-- Decorative animation (drops) -->
